--- a/testUseNetKit/DownloadCellTableViewCell.xib
+++ b/testUseNetKit/DownloadCellTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="KGk-i7-Jjw" customClass="DownloadCellTableViewCell" customModule="testUseNetKit" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="KGk-i7-Jjw" customClass="DownloadCellTableViewCell" customModule="DownLoader" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -18,7 +18,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx.zip" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yE8-kW-4Ec">
                         <rect key="frame" x="18" y="11" width="53" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZC1-pd-vuW">
@@ -42,6 +42,18 @@
                             </mask>
                         </variation>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="state" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGv-VP-XKI">
+                        <rect key="frame" x="272" y="33" width="38.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="speed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k0H-ER-KKB">
+                        <rect key="frame" x="211" y="33" width="47.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="Cah-0y-R1h" secondAttribute="bottom" constant="-4" id="1An-49-qqf"/>
@@ -51,6 +63,10 @@
                     <constraint firstItem="Cah-0y-R1h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="LDo-tq-lNe"/>
                     <constraint firstItem="yE8-kW-4Ec" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="Qso-Xg-vR8"/>
                     <constraint firstItem="ZC1-pd-vuW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="YsC-ju-0UM"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="k0H-ER-KKB" secondAttribute="bottom" constant="-3.5" id="fi2-rG-lT6"/>
+                    <constraint firstItem="fGv-VP-XKI" firstAttribute="leading" secondItem="k0H-ER-KKB" secondAttribute="trailing" constant="13.5" id="h6G-fW-usG"/>
+                    <constraint firstAttribute="bottom" secondItem="fGv-VP-XKI" secondAttribute="bottom" constant="3.5" id="pYs-zW-wvK"/>
+                    <constraint firstAttribute="trailing" secondItem="fGv-VP-XKI" secondAttribute="trailing" constant="9" id="sXF-bi-wuZ"/>
                     <constraint firstAttribute="trailing" secondItem="ZC1-pd-vuW" secondAttribute="trailing" constant="16" id="xrC-mB-fMl"/>
                 </constraints>
             </tableViewCellContentView>
@@ -58,6 +74,8 @@
                 <outlet property="cureentSize" destination="Cah-0y-R1h" id="UVI-oa-8Zh"/>
                 <outlet property="fileName" destination="yE8-kW-4Ec" id="NCd-k0-H6l"/>
                 <outlet property="progress" destination="ZC1-pd-vuW" id="EhJ-Uj-zcu"/>
+                <outlet property="speed" destination="k0H-ER-KKB" id="Nzk-Fc-Igz"/>
+                <outlet property="state" destination="fGv-VP-XKI" id="qA5-tn-hoL"/>
             </connections>
             <point key="canvasLocation" x="376" y="231"/>
         </tableViewCell>
